--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,10 @@ p {
   margin-bottom: 1.25rem;
   color: var(--clr-grey-5);
 }
+small {
+  color: var(--clr-grey-5);
+}
+
 @media screen and (min-width: 800px) {
   h1 {
     font-size: 4rem;
